Add: Check email availability, upload user avatar, and auth jwt service
